# Pylean

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py  shell.nix
examples/: README.md  __init__.py  advanced_llvm_demo.py  advanced_pattern_matching_demo.py  advanced_tactics_demo.py  arrow_test.py  cli_commands_test.py  cli_demo.py  cli_test.py  compiler_demo.py  comprehensive_usage_example.py  even_square_theorem.py  expanded_tactics_demo.py  ffi_demo.py  id_fn_proof.py  induction_demo.py  inductive_demo.py  integrated_parser_demo.py  kernel_demo.py  kernel_usage.py  list_demo.py  llvm_compiler_demo.py  meta_demo.py  module_demo.py  namespace_demo.py  nat_demo.py  parser_demo.py  parsing_example.py  pattern_matching_demo.py  pi_type_demo.py  pi_type_parser_test.py  pylean_pi_types_guide.py  reduce_demo.py  set_demo.py  stdlib_demo.py  tactic_repl_demo.py  tactics_demo.py  tail_call_optimization_demo.py  typeclass_demo.py
pylean/: __init__.py  cli.py  elaborator.py
pylean/codegen/: __init__.py  backend.py  c_backend.py  compiler.py  llvm_backend.py
pylean/kernel/: README.md  __init__.py  eliminator.py  env.py  expr.py  kernel.py  pattern_opt.py  reduce.py  tactic.py  tactic_repl.py  typecheck.py  typeclass.py
pylean/meta/: __init__.py  expr.py  tactics.py
pylean/module/: __init__.py  env.py  module.py
pylean/parser/: __init__.py  core.py  expr.py  pratt.py  test_expr.py
pylean/runtime/: __init__.py  memory.py
pylean/stdlib/: __init__.py  init.py  list.py  logic.py  nat.py
tests/: __init__.py  test_elaborator.py
tests/kernel/: __init__.py  test_eliminator.py  test_env.py  test_expr.py  test_induction_tactic.py  test_kernel.py  test_reduce.py  test_replace_expr.py  test_typecheck.py  test_typeclass.py
tests/parser/: __init__.py  test_expr.py
